Implementing drawing lines on canvas.

--- a/web/style.css
+++ b/web/style.css
@@ -14,8 +14,8 @@ body {
 }
 
 canvas {
-    width: 30vw;
-    aspect-ratio: 1/1;
+    /*width: 30vw;*/
+    /*aspect-ratio: 1/1;*/
     border: 1px black solid;
 }
 
