Connect title page to home page.

--- a/web/static/title.css
+++ b/web/static/title.css
@@ -31,7 +31,6 @@
     justify-content: center;
     align-items: center;
     font-family: "Roboto Mono", monospace;
-
 }
 
 #title {
@@ -61,4 +60,5 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    user-select: none;
 }
