--- a/web/templates/title.html
+++ b/web/templates/title.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/title.css">
+    <link rel="stylesheet" href="../static/title.css">
+    <script src="../static/title.js"></script>
+    <script src="../static/home.js" type="application/javascript"></script>
 </head>
 <body>
 <div id="allElements">
-    <img src="cartoonpencil.png"></img>
+    <img src="../static/cartoonpencil.png" alt="Cartoon Penncil">
     <div id="title">
         <h1>AI Math Solver</h1>
         <h3>AI for your math help</h3>
