--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
 
-    <script src="home.js"></script>
-    <link rel="stylesheet" href="css/home.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-
+    <link rel="stylesheet" type="text/css" href="../static/home.css">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <title>Math Solver</title>
 </head>
 <body>
+    <div id="loading-circle"></div>
     <div class="header flex-display">Put something here?</div>
     <div class="content">
         <div class="sidebar">
