Serve title page on localhost:5000

--- a/web/templates/title.html
+++ b/web/templates/title.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../static/title.css">
+    <link rel="stylesheet" href="../static/title.css">``
     <script src="../static/title.js"></script>
     <script src="../static/home.js" type="application/javascript"></script>
 </head>
