--- a/web/templates/title.html
+++ b/web/templates/title.html
@@ -2,13 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../static/title.css">``
+    <link rel="stylesheet" href="../static/title.css">
+    ``
     <script src="../static/title.js"></script>
     <script src="../static/home.js" type="application/javascript"></script>
+<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"
+        type="application/javascript"></script>
 </head>
 <body>
+<p>
+  When \(a \ne 0\), there are two solutions to \(ax^2 + bx + c = 0\) and they are
+  \[x = {-b \pm \sqrt{b^2-4ac} \over 2a}.\]
+</p>
 <div id="allElements">
-    <img src="../static/cartoonpencil.png" alt="Cartoon Penncil">
+
+    <img src="../static/cartoonpencil.png" alt="Cartoon Pencil">
     <div id="title">
         <h1>AI Math Solver</h1>
         <h3>AI for your math help</h3>
