--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -14,7 +14,8 @@
 <body>
 <dialog>
     <h2>Model Prediction</h2>
-    <p><span class="math display">\[y = \frac{a}{b} + c^2 + d\]</span></p>
+    <p>\[y = \frac{a}{b} + c^2 + d\]</p>
+    <img id="result-image" alt="not found yet">
     <button id="close-button">Close</button>
 </dialog>
 <div id="loading-circle"></div>
