Changing the styling

--- a/web/static/home.css
+++ b/web/static/home.css
@@ -126,7 +126,7 @@ dialog{
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-
+    border-color: transparent;
 }
 
 dialog:not([open]) {
@@ -134,28 +134,24 @@ dialog:not([open]) {
   opacity: 0;
 }
 
-dialog h2{
-    border-bottom: 2px solid black;
-}
-
 dialog button {
     width: 20vh;
     height: 5vh;
     border-radius: 5vh;
-    border-color: orangered;
-    background: linear-gradient(to bottom, orange , red);
+    border: transparent;
+    background: rgba(169, 169, 169, 0.5); /* Light gray with 50% transparency */
     color: white;
     font-weight: bold;
 }
 
-::backdrop {
-  background-image: linear-gradient(
-    45deg,
-    dodgerblue,
-    lightgray
-  );
-  opacity: 0.75;
-}
+/*::backdrop {*/
+/*  background-image: linear-gradient(*/
+/*    45deg,*/
+/*    dodgerblue,*/
+/*    lightgray*/
+/*  );*/
+/*  opacity: 0.75;*/
+/*}*/
 
 #submit-button {
     width: 20vh;
@@ -171,4 +167,8 @@ dialog button {
     border-color: yellow;
     background: linear-gradient(to bottom, #5DBB37 , green);
 
+}
+
+#close-button {
+    background: blue;
 }
