Changing the styling

--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-
     <link rel="stylesheet" type="text/css" href="../static/home.css">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script src="../static/home.js" type="application/javascript"></script>
@@ -12,14 +11,14 @@
 
 </head>
 <body>
-<dialog>
+<dialog id="popup">
     <h2>Model Prediction</h2>
     <p>\[y = \frac{a}{b} + c^2 + d\]</p>
     <img id="result-image" alt="not found yet">
     <button id="close-button">Close</button>
 </dialog>
 <div id="loading-circle"></div>
-<div class="header flex-display">Put something here?</div>
+<div class="header flex-display">Write a math equation below</div>
 <div class="content">
     <div class="sidebar">
         <div id="erase" class="icon icon-unselected">
