--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -13,7 +13,7 @@
 <body>
 <dialog id="popup">
     <h2>Model Prediction</h2>
-    <p>\[y = \frac{a}{b} + c^2 + d\]</p>
+    <p id="latex-view"></p>
     <img id="result-image" alt="not found yet">
     <button id="close-button">Close</button>
 </dialog>
