Fix dialog issues

--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -15,7 +15,7 @@
 <dialog id="popup">
     <h2>Model Prediction</h2>
     <p id="latex-view"></p>
-    <img id="result-image" alt="not found yet">
+    <img id="result-image" alt="Waiting...">
     <button id="close-button">Close</button>
 </dialog>
 <div id="loading-circle"></div>
