--- a/web/templates/title.html
+++ b/web/templates/title.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div id="allElements">
-    <img src="../static/cartoonpencil.png" alt="Cartoon Pencil">
+    <img id="pencil-img" src="../static/cartoonpencil.png" alt="Cartoon Pencil">
     <div id="title">
         <h1>AI Math Solver</h1>
         <h3>AI for your math help</h3>
